# www/src/Application/Api.php
@@ -3,6 +3,7 @@
 namespace Dm1tru\Barcoder\Application;
 
 use Dm1tru\Barcoder\Domain\Entity\Barcode;
+use Dm1tru\Barcoder\Domain\Entity\Device;
 use Dm1tru\Barcoder\Domain\Entity\Response;
 use Dm1tru\Barcoder\Domain\Entity\User;
 use Dm1tru\Barcoder\Domain\Repository\BarcodeRepositoryInterface;
@@ -11,7 +12,10 @@ use Dm1tru\Barcoder\Domain\ValueObject\Code;
 use Dm1tru\Barcoder\Domain\ValueObject\Count;
 use Dm1tru\Barcoder\Domain\ValueObject\Date;
 use Dm1tru\Barcoder\Domain\ValueObject\Id;
+use Dm1tru\Barcoder\Domain\ValueObject\Ip;
 use Dm1tru\Barcoder\Domain\ValueObject\Method;
+use Dm1tru\Barcoder\Domain\ValueObject\Name;
+use Dm1tru\Barcoder\Domain\ValueObject\Order;
 
 class Api
 {
@@ -44,12 +48,15 @@ class Api
                 case 'devices':
                     $response = $this->getDevices();
                     break;
+                case 'device':
+                    $response = $this->getDevice();
+                    break;
                 case 'codes':
                     $response = $this->getCodes();
                     break;
                 default:
                     throw new \Exception("Неверная команда", 404);
-                    $response;
+                    break;
             }
         } catch (\Exception $e) {
             $response = new Response(['error' => $e->getMessage()], $e->getCode());
@@ -60,29 +67,126 @@ class Api
 
     public function getDevices(): Response
     {
-        if (count($this->path) > 2) {
+        if (count($this->path) > 1) {
             throw new \Exception('Неверная команда', 404);
         }
 
-        if (count($this->path) == 2) {
-            if (preg_match('/^([0-9]+)$/i', $this->path[1], $m)) {
-                return $this->getDeviceById((int)$m[1]);
-            } else {
-                throw  new \Exception("Неверная команда", 400);
-            }
+        switch ($this->request->getMethod()) {
+            case Method::GET:
+                return $this->getDevicesList();
+                break;
+            case Method::POST:
+                return $this->getDevicesPost();
+                break;
+            default:
+                throw new \Exception("Неверный метод", 400);
+                break;
         }
-
-        return $this->getDevicesList();
     }
 
-    private function getDeviceById(int $id): Response
+    private function getDevice(): Response
     {
-        $dev = $this->deviceRepository->getById(new id($id));
+
+        if (count($this->path) != 2) {
+            throw new \Exception('Неверная команда', 404);
+        }
+
+        if (preg_match('/^([0-9]+)$/i', $this->path[1], $m)) {
+            $dev_id = (int)$m[1];
+        } else {
+            throw  new \Exception("Неверная команда", 400);
+        }
+
+        $dev = $this->deviceRepository->getById(new id($dev_id));
         if (!$dev) {
             throw  new \Exception("Устройство не найдено", 404);
         }
 
+        switch ($this->request->getMethod()) {
+            case Method::GET:
+                return $this->getDeviceGet($dev_id);
+                break;
+            case Method::PUT:
+                return $this->getDevicePut($dev_id);
+                break;
+            case Method::DELETE:
+                return $this->getDeviceDelete($dev_id);
+                break;
+            default:
+                throw new \Exception("Неверный метод", 400);
+                break;
+        }
+    }
+
+    private function getDevicePut(int $id): Response
+    {
+        $params = $this->request->getParameters();
+        $is_empty = true;
+        if (isset($params['host'])) {
+            $ip = new Ip($params['host']);
+            $is_empty = false;
+        } else {
+            $ip = null;
+        }
+
+        if (isset($params['name'])) {
+            $name = new Name($params['name']);
+            $is_empty = false;
+        } else {
+            $name = null;
+        }
+
+        if (isset($params['order']) && intval($params['order'])) {
+            $order = new Order(intval($params['order']));
+            $is_empty = false;
+        } else {
+            $order = null;
+        }
+
+        if ($is_empty) {
+            throw new \Exception("Отсутствуют параметры", 400);
+        }
+
+        $dev = $this->deviceRepository->update(new Id($id), $name, $ip, $order);
         return new Response($dev->asArray());
+    }
+
+    private function getDeviceDelete($id)
+    {
+        $this->deviceRepository->deleteById(new Id($id));
+        return new Response('OK');
+    }
+
+    private function getDeviceGet(int $id): Response
+    {
+        $dev = $this->deviceRepository->getById(new id($id));
+        return new Response($dev->asArray());
+    }
+
+    private function getDevicesPost(): Response
+    {
+        $params = $this->request->getParameters();
+        if (!isset($params['name'])) {
+            throw new \Exception("Не указано название", 400);
+        }
+
+        if (!isset($params['host'])) {
+            throw new \Exception("Не указан хост", 400);
+        }
+
+        if (!isset($params['order']) || !intval($params['order'])) {
+            $params['order'] = 1000;
+        }
+
+        $device = new Device(
+            new Id(0),
+            new Name($params['name']),
+            new Ip($params['host']),
+            new Order(intval($params['order']))
+        );
+
+        $id = $this->deviceRepository->add($device);
+        return new Response(['id' => $id->getId()]);
     }
 
     private function getDevicesList(): Response
@@ -99,7 +203,6 @@ class Api
 
     private function getCodes()
     {
-
         switch ($this->request->getMethod()) {
             case Method::GET:
                 return $this->getCodesGet();
